# qmatsim

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LESSONS.md  README.md  SSOT.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: STRUCTURE_DECISION.md
qmatsim/: __main__.py
scripts/: run-DFT.sh  validate-structure.py
