[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QMatSim"
version = "0.1.0"
description = "Advanced strain engineering framework for discovering flat bands and lateral heterostructures in 2D quantum materials"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Meshal Alawein", email = "meshal@berkeley.edu"}
]
maintainers = [
    {name = "Meshal Alawein", email = "meshal@berkeley.edu"}
]
keywords = ["strain-engineering", "flat-bands", "quantum-materials", "2d-materials", "dft", "siesta", "lammps", "tmdc", "lateral-heterostructures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alaweimm90/QMatSim"
Repository = "https://github.com/alaweimm90/QMatSim"
Documentation = "https://github.com/alaweimm90/QMatSim/docs"
"Bug Tracker" = "https://github.com/alaweimm90/QMatSim/issues"

[project.scripts]
qmatsim = "qmatsim.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qmatsim*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
qmatsim = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
